Update documentation of proxy-uri property.

SoupSession resolve the default proxy when the proxy-uri
property is absent. Setting the proxy-uri will override the
default proxy.

This patch updates the doc to make that apparent.

https://bugzilla.gnome.org/show_bug.cgi?id=725126